alteração da origem permitida

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,7 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 
 # FORMATAÇÃO DE DATAS NO JASON
 spring.jackson.date-format=yyyy-MM-dd
+
+# TIPO DE SEGURANÇA USADA NO SISTEMA
+spring.profiles.active=basic-security
+# spring.profiles.active=oauth-security
