--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,7 +1,9 @@
+# propriedade da classe AlgamoneyApiProperty
 algamoney.seguranca.enable-https=true
 
 spring.datasource.url={JDBC_DATABASE_URL}
 spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
-algamoney.origin-permitida=https://aocosta-algamoney-angular.herokuapp.com
+# propriedade da classe AlgamoneyApiProperty
+algamoney.origem-permitida=https://aocosta-algamoney-angular.herokuapp.com
