versão com mais inserção de comentários no código fonte

--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,9 +1,10 @@
 # propriedade da classe AlgamoneyApiProperty
 algamoney.seguranca.enable-https=true
 
+# os valores dessas variáveis são configuradas no heroku no momento em que o mysql (jawsdb) é adicionado
 spring.datasource.url={JDBC_DATABASE_URL}
 spring.datasource.username={JDBC_DATABASE_USERNAME}
 spring.datasource.password={JDBC_DATABASE_PASSWORD}
 
 # propriedade da classe AlgamoneyApiProperty
-algamoney.origem-permitida=https://aocosta-algamoney-angular.herokuapp.com
+algamoney.origin-permitida=https://aocosta-algamoney-angular.herokuapp.com
