--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,6 +13,6 @@ spring.jackson.deserialization.fail-on-unknown-properties=true
 # FORMATAÇÃO DE DATAS NO JASON
 spring.jackson.date-format=yyyy-MM-dd
 
-# TIPO DE SEGURANÇA USADA NO SISTEMA
-spring.profiles.active=basic-security
-# spring.profiles.active=oauth-security
+# TIPO DE SEGURANÇA USADA NO SISTEMA (basic-security -> desenvolvimento / oauth-security -> produção)
+# spring.profiles.active=basic-security
+spring.profiles.active=oauth-security
